--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,6 @@
 # bot token
 TELEGRAM_TOKEN=
 
-# telegram chat id for birthday notifications
-CHAT_ID=
+# the cyclic dynamodb and collection to use for storing birthdays
+CYCLIC_DB=
+CYCLIC_DB_COLLECTION=
