--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@cyclic.sh/dynamodb": "^0.0.34",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "grammy": "^1.11.2",
     "jest": "^29.6.0",
