--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node-fetch": "^2.6.2",
     "@types/yargs": "^17.0.24",
     "env-cmd": "^10.1.0",
+    "msw": "^1.2.2",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
@@ -53,6 +54,7 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "grammy": "^1.11.2",
+    "i18next": "^23.2.8",
     "jest": "^29.6.0",
     "luxon": "^3.3.0"
   }
