--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,9 @@ TELEGRAM_TOKEN=
 # the cyclic dynamodb and collection to use for storing birthdays
 CYCLIC_DB=
 CYCLIC_DB_COLLECTION=
+
+# you'll also need AWS environment variables for DynamoDB
+AWS_REGION=
+AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
