--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "^4.18.2",
     "grammy": "^1.17.2",
     "i18next": "^23.2.8",
+    "i18next-fs-backend": "^2.1.5",
     "jest": "^29.6.0",
     "luxon": "^3.3.0"
   }
