--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "i18next": "^23.2.8",
     "i18next-fs-backend": "^2.1.5",
     "jest": "^29.6.0",
-    "luxon": "^3.3.0"
+    "luxon": "^3.3.0",
+    "redis": "^4.6.7"
   }
 }
