--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "env-cmd": "^10.1.0",
     "msw": "^1.2.2",
     "prettier": "^2.8.8",
+    "prisma": "^5.14.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4",
@@ -52,6 +53,7 @@
   },
   "dependencies": {
     "@cyclic.sh/dynamodb": "^0.0.34",
+    "@prisma/client": "^5.14.0",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "grammy": "^1.17.2",
