--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest": "^29.6.0",
     "luxon": "^3.3.0",
     "openai": "^4.20.0",
+    "redis": "^4.6.14",
     "title-case": "^3.0.3"
   }
 }
