--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for birthday-bot-dev-rr on 2024-05-20T12:36:12+01:00
+# fly.toml app configuration file generated for birthday-bot-dev-rr on 2024-05-21T11:15:44+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -20,3 +20,6 @@ primary_region = 'lhr'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+[deploy]
+  release_command = "npx prisma migrate deploy"
