Upserts group chats on join, fix api endpoint for retrieval

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "env-cmd ts-node-dev --transpile-only src/bot.ts",
     "types:watch": "tsc --watch --noEmit",
     "register": "env-cmd ts-node scripts/registerWebhook.ts",
+    "removeWebhook": "env-cmd ts-node scripts/removeWebhook.ts",
     "test": "env-cmd jest --runInBand",
     "test:watch": "env-cmd jest --watch --runInBand",
     "i18:diff": "bash -c 'diff <(jq \".. | keys?\" locales/pt/translation.json) <(jq \".. | keys?\" locales/en/translation.json)'"
