Add push trigger

--- a/.github/workflows/deploy-bot.yaml
+++ b/.github/workflows/deploy-bot.yaml
@@ -5,6 +5,9 @@ on:
   pull_request:
     branches:
       - main
+  # remove this one later I guess
+  push:
+    branches: [main]
 
 jobs:
   deploy:
