--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -3,7 +3,8 @@ name: Deploy to Fly.io PROD
 # todo split this into two in the future
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   deploy:
