README and other little fixes

--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,7 @@ TELEGRAM_TOKEN=
 SECRET_ADMIN_KEY=
 
 # prisma db meaning postgres
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:local-dev123@localhost:5432/postgres?schema=public"
 
 REDIS_URL=
 
