--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -2,6 +2,9 @@ name: Deploy to Fly.io dev bot
 
 # todo split this into two in the future
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches: 
       - main
