--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@cyclic.sh/dynamodb": "^0.0.34",
     "@prisma/client": "^5.14.0",
+    "@types/nunjucks": "^3.2.6",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "grammy": "^1.28.0",
@@ -64,6 +65,7 @@
     "i18next-fs-backend": "^2.1.5",
     "jest": "^29.6.0",
     "luxon": "^3.3.0",
+    "nunjucks": "^3.2.4",
     "openai": "^4.20.0",
     "redis": "^4.6.14",
     "title-case": "^3.0.3"
