--- a/.env.sample
+++ b/.env.sample
@@ -18,5 +18,5 @@ REDIS_URL=
 # for the conversational command
 OPENAI_API_KEY=
 
-# host where to find the bot (for api requests)
+# host where to find the bot (for api requests, eg https://birthday-bot-dev-rr.fly.dev)
 BOT_HOST=
