first test of react miniapp deploy

--- a/.env.sample
+++ b/.env.sample
@@ -20,3 +20,7 @@ OPENAI_API_KEY=
 
 # host where to find the bot (for api requests, eg https://birthday-bot-dev-rr.fly.dev)
 BOT_HOST=
+
+# used to forward the /web* miniapp traffic to Vite. 
+# Requires having Vite running (npm run dev from the /web folder)
+IS_DEV=
