--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ app = 'birthday-bot-prod'
 primary_region = 'lhr'
 
 [build]
+# check Dockerfile
 
 [deploy]
   release_command = 'npx prisma migrate deploy'
