--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/nunjucks": "^3.2.6",
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "express-http-proxy": "^2.1.1",
     "grammy": "^1.28.0",
     "i18next": "^23.2.8",
     "i18next-fs-backend": "^2.1.5",
