--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/eludadev/telegram-bot#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-http-proxy": "^1.6.6",
     "@types/jest": "^29.5.2",
     "@types/luxon": "^3.3.0",
     "@types/node": "^18.11.7",
