--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.14.0",
+    "@telegram-apps/analytics": "^1.4.3",
     "@telegram-apps/telegram-ui": "^2.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
